# chip8-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
ci/: before_deploy.sh  script.sh
src/: bits.rs  cpu.rs  display.rs  font.rs  keyboard.rs  main.rs
