[package]
name = "chip8-rs"
version = "0.5.0"
authors = ["Robin Biscay <biscay.rob@gmail.com"]
edition = "2018"
description = "emulator for old processor called chip 8"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/BiscayRobin/chip8-rs"
repository = "https://github.com/BiscayRobin/chip8-rs"
keywords = ["emulator","window","learning"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
clap = "2.33.0"
minifb = "0.12.0"